--- a/templates/electronics.html
+++ b/templates/electronics.html
@@ -40,7 +40,7 @@
       <li class="list__item">
         <a href="{{lights + "/10"}}">
           <img class="item__img" src="../static/img/asamblea_ecologica.svg" alt="asamblea_ecologica">
-          <span>10 y más</span></a>
+          <span>nuestra asamblea ecologica</span></a>
       </li>
     </ul>
     {% endblock %}
